...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jWI-dY-jEu">
                                <rect key="frame" x="20" y="240" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="duration"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="avZ-oc-XC1"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="i9q-Jo-Hyb" userLabel="title">
                                <rect key="frame" x="20" y="69" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="title"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CCw-tj-dBm">
                                <rect key="frame" x="20" y="136" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="category"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="zfl-r0-f5p"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="Z5M-iw-YEh">
                        <barButtonItem key="rightBarButtonItem" title="Save" id="DuX-q5-3hc">
                            <connections>
                                <action selector="SavePressed:" destination="1eL-Qf-eHn" id="FLO-Yx-E4A"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="18"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <segue destination="MDP-0C-mzj" kind="show" id="Z8E-oP-98x"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uOm-M1-Wne">
                                <rect key="frame" x="20" y="189" width="560" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="20" y="218" width="560" height="30"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" label="username"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="nAU-Tj-3Z3"/>
...
                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14g-AG-9xB">
                                <rect key="frame" x="20" y="256" width="560" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="v6g-Bf-n9q">
                                <rect key="frame" x="20" y="285" width="560" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="password"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="fBB-2F-HII"/>
...
                                <accessibility key="accessibilityConfiguration" label="DoneButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <action selector="Done_button_clicked:" destination="5NY-U5-0e2" eventType="touchUpInside" id="x4u-mr-8i6"/>
...
