...
    super.viewDidLoad()
    self.title = current.Title
    
    editor = RichEditorView(frame: self.view.bounds)
    editor!.setHTML("<h2>"+current.Title+"</h2>" )
    editor?.delegate = self
    editor?.accessibilityLabel = "texteditor"
    editor?.webView.becomeFirstResponder()
    editor?.setHTML(currentText!)
    
    self.view.addSubview(editor!)
    keyman = KeyboardManager(view: self.view)
    keyman?.toolbar.delegate = self
...
